--- a/src/main/resources/com/example/demo/loginView.fxml
+++ b/src/main/resources/com/example/demo/loginView.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginViewController">
    <children>
       <ImageView fitHeight="734.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@pics/fondoLogin.png" />
          </image>
       </ImageView>
+      <Button fx:id="btnMostrarViewPrincipal2" layoutX="860.0" layoutY="583.0" mnemonicParsing="false" onAction="#btnMostrarViewPrincipal2" opacity="0.0" prefHeight="64.0" prefWidth="203.0" text="Button" />
    </children>
 </AnchorPane>
