--- a/src/main/resources/com/example/demo/registroView.fxml
+++ b/src/main/resources/com/example/demo/registroView.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.RegistroViewController">
    <children>
       <ImageView fitHeight="734.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@pics/fondoRegistro.png" />
          </image>
       </ImageView>
+      <Button fx:id="btnMostrarViewLogin2" layoutX="359.0" layoutY="604.0" mnemonicParsing="false" onAction="#showViewLogin2" opacity="0.0" prefHeight="40.0" prefWidth="105.0" text="Button" />
+      <Button fx:id="btnMostrarViewPrincipal" layoutX="107.0" layoutY="535.0" mnemonicParsing="false" onAction="#showViewPrincipal" opacity="0.0" prefHeight="62.0" prefWidth="216.0" text="Button" />
    </children>
 </AnchorPane>
