--- a/src/main/resources/com/example/demo/ajustesView.fxml
+++ b/src/main/resources/com/example/demo/ajustesView.fxml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.AjustesViewController">
    <children>
       <ImageView fitHeight="732.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@pics/fondoPrincipal.png" />
+            <Image url="@pics/fondoAjustes.jpg" />
          </image>
       </ImageView>
       <Label layoutX="41.0" layoutY="10.0" prefHeight="90.0" prefWidth="152.0" text="QR TV+" textFill="WHITE">
          <font>
-            <Font size="39.0" />
+            <Font size="26.0" />
          </font>
       </Label>
       <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#3c3e4052" height="63.0" layoutX="261.0" layoutY="26.0" stroke="#ffffff00" strokeType="INSIDE" width="642.0" />
@@ -27,11 +31,157 @@
          </font>
       </Label>
       <Button fx:id="btnMostrarViewHome" layoutX="284.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewHome" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="home" />
-      <Button fx:id="btnPrueba" layoutX="225.0" layoutY="585.0" mnemonicParsing="false" onAction="#mostrarVideo" prefHeight="55.0" prefWidth="151.0" text="Mirar video" />
       <Button fx:id="btnMostrarViewPeliculas" layoutX="375.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewPeliculas" opacity="0.0" prefHeight="65.0" prefWidth="90.0" text="peliculas" />
       <Button fx:id="btnMostrarViewSeries" layoutX="477.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewSeries" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="series" />
       <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewBiblioteca" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
       <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewBuscador" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
       <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewAjustes" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
+      <TextField fx:id="txtId" layoutX="1110.0" layoutY="53.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
+      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#ffffff52" height="479.0" layoutX="570.0" layoutY="160.0" opacity="0.5" stroke="#ffffff00" strokeType="INSIDE" width="480.0" />
+      <Text fill="WHITE" layoutX="855.0" layoutY="596.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update" textAlignment="RIGHT" wrappingWidth="139.5291375663864">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Button fx:id="btnUpdate" layoutX="897.0" layoutY="560.0" mnemonicParsing="false" onAction="#updateDatos" opacity="0.0" prefHeight="54.0" prefWidth="114.0" />
+      <VBox layoutX="602.0" layoutY="195.0" prefHeight="434.0" prefWidth="142.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name : " wrappingWidth="141.37783141404265">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname : " wrappingWidth="139.5291375663864">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Birth : " wrappingWidth="139.5291375663864">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender : " wrappingWidth="139.5291375663864">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="E-mail : " wrappingWidth="139.5291375663864">
+               <font>
+                  <Font size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password : " wrappingWidth="139.5291375663864">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Text>
+         </children>
+      </VBox>
+      <VBox layoutX="765.0" layoutY="192.0" prefHeight="349.0" prefWidth="237.0">
+         <children>
+            <TextField fx:id="txtName" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="22.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="txtSurname" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="22.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="txtBirth" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="22.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="txtGender" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="22.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="txtMail" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="22.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="txtPassword" prefHeight="39.0" prefWidth="237.0">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </TextField>
+         </children>
+      </VBox>
+      <Label fx:id="txtError" alignment="CENTER_RIGHT" layoutX="790.0" layoutY="658.0" prefHeight="38.0" prefWidth="260.0" textAlignment="RIGHT" textFill="#f2dd20">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="334.0" fitWidth="326.0" layoutX="65.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@pics/bmo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="223.0" fitWidth="200.0" layoutX="298.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@pics/bocadillo.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="363.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome!" wrappingWidth="105.5211181640625">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="353.0" layoutY="227.0" strokeType="OUTSIDE" strokeWidth="0.0" text="You can edit">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="359.0" layoutY="253.0" strokeType="OUTSIDE" strokeWidth="0.0" text="your profile">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="396.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="here" wrappingWidth="105.5211181640625">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="707.0" layoutY="595.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sign off" textAlignment="RIGHT" wrappingWidth="175.7885369804489">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Button fx:id="btnCerrarSesion" layoutX="713.0" layoutY="562.0" mnemonicParsing="false" onAction="#cerrarSesion" opacity="0.0" prefHeight="54.0" prefWidth="179.0" />
    </children>
 </AnchorPane>
