--- a/src/main/resources/com/example/demo/contenidoView.fxml
+++ b/src/main/resources/com/example/demo/contenidoView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -90,5 +91,6 @@
             </Label>
          </children>
       </HBox>
+      <TextField fx:id="txtId" layoutX="1120.0" layoutY="63.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
    </children>
 </AnchorPane>
