--- a/src/main/resources/com/example/demo/loginView.fxml
+++ b/src/main/resources/com/example/demo/loginView.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.LoginViewController">
    <children>
@@ -13,5 +19,40 @@
          </image>
       </ImageView>
       <Button fx:id="btnMostrarViewPrincipal2" layoutX="860.0" layoutY="583.0" mnemonicParsing="false" onAction="#btnMostrarViewPrincipal2" opacity="0.0" prefHeight="64.0" prefWidth="203.0" text="Button" />
+      <VBox layoutX="153.0" layoutY="390.0" prefHeight="179.0" prefWidth="371.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="E-mail" wrappingWidth="370.296142578125">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Text>
+            <TextField fx:id="titMail" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="example@mail.ext">
+               <VBox.margin>
+                  <Insets bottom="25.0" />
+               </VBox.margin>
+            </TextField>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="370.296142578125">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Text>
+            <TextField fx:id="titPassword" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="*************">
+               <VBox.margin>
+                  <Insets bottom="25.0" />
+               </VBox.margin>
+            </TextField>
+            <Label fx:id="txtError" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="371.0" textFill="RED">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <Text fill="WHITE" layoutX="154.0" layoutY="618.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No account yet? Register now" wrappingWidth="347.13991756078235">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Button fx:id="btnMostrarViewRegistro" layoutX="143.0" layoutY="584.0" mnemonicParsing="false" onAction="#btnMostrarViewRegistro" opacity="0.0" prefHeight="47.0" prefWidth="330.0" text="Button" />
    </children>
 </AnchorPane>
