--- a/src/main/resources/com/example/demo/peliculasView.fxml
+++ b/src/main/resources/com/example/demo/peliculasView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,7 +18,7 @@
       </ImageView>
       <Label layoutX="41.0" layoutY="10.0" prefHeight="90.0" prefWidth="152.0" text="QR TV+" textFill="WHITE">
          <font>
-            <Font size="39.0" />
+            <Font size="26.0" />
          </font>
       </Label>
       <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#3c3e4052" height="63.0" layoutX="261.0" layoutY="26.0" stroke="#ffffff00" strokeType="INSIDE" width="642.0" />
@@ -33,5 +34,6 @@
       <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewBiblioteca" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
       <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewBuscador" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
       <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewAjustes" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
+      <TextField fx:id="txtId" layoutX="1120.0" layoutY="63.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
    </children>
 </AnchorPane>
