--- a/src/main/resources/com/example/demo/principalView.fxml
+++ b/src/main/resources/com/example/demo/principalView.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.PrincipalViewController">
    <children>
@@ -15,9 +20,13 @@
             <Image url="@pics/fondoPrincipal.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="img1" fitHeight="392.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img2" fitHeight="392.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img3" fitHeight="392.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="img4" fitHeight="392.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="41.0" layoutY="10.0" prefHeight="90.0" prefWidth="152.0" text="QR TV+" textFill="WHITE">
          <font>
-            <Font size="39.0" />
+            <Font size="26.0" />
          </font>
       </Label>
       <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#3c3e4052" height="63.0" layoutX="261.0" layoutY="26.0" stroke="#ffffff00" strokeType="INSIDE" width="642.0" />
@@ -27,11 +36,90 @@
          </font>
       </Label>
       <Button fx:id="btnMostrarViewHome" layoutX="284.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewHome" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="home" />
-      <Button fx:id="btnPrueba" layoutX="225.0" layoutY="585.0" mnemonicParsing="false" onAction="#mostrarVideo" prefHeight="55.0" prefWidth="151.0" text="Mirar video" />
       <Button fx:id="btnMostrarViewPeliculas" layoutX="375.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewPeliculas" opacity="0.0" prefHeight="65.0" prefWidth="90.0" text="peliculas" />
       <Button fx:id="btnMostrarViewSeries" layoutX="477.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewSeries" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="series" />
       <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewBiblioteca" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
       <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewBuscador" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
       <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewAjustes" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
+      <TextField fx:id="txtId" disable="true" layoutX="1100.0" layoutY="43.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
+      <Text fill="WHITE" layoutX="1091.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;" textAlignment="CENTER" wrappingWidth="50.21630859375">
+         <font>
+            <Font name="System Bold" size="40.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="27.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&lt;" textAlignment="CENTER" wrappingWidth="50.21630859375">
+         <font>
+            <Font name="System Bold" size="40.0" />
+         </font>
+      </Text>
+      <Button layoutX="24.0" layoutY="176.0" mnemonicParsing="false" onAction="#prev" opacity="0.0" prefHeight="42.0" prefWidth="57.0" text="&lt;" />
+      <Button layoutX="1086.0" layoutY="173.0" mnemonicParsing="false" onAction="#next" opacity="0.0" prefHeight="41.0" prefWidth="62.0" text="&gt;" />
+      <VBox layoutX="104.0" layoutY="103.0" prefHeight="150.0" prefWidth="464.0">
+         <children>
+            <Label prefHeight="52.0" prefWidth="152.0" text="NEW" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="45.0" />
+               </font>
+            </Label>
+            <Label prefHeight="118.0" prefWidth="485.0" text="RELEASES" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="96.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <VBox layoutX="764.0" layoutY="240.0" prefHeight="186.0" prefWidth="361.0">
+         <children>
+            <Label fx:id="txtTitulo" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="365.0" textAlignment="RIGHT" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtDuracion" alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="365.0" textAlignment="RIGHT" textFill="WHITE">
+               <font>
+                  <Font name="System Bold Italic" size="20.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="373.0" text="play now" textAlignment="RIGHT" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <Button fx:id="btnPrueba" layoutX="1012.0" layoutY="331.0" mnemonicParsing="false" onAction="#mostrarVideo" opacity="0.0" prefHeight="56.0" prefWidth="127.0" text="Mirar video" />
+      <HBox alignment="CENTER" layoutX="-2.0" layoutY="404.0" prefHeight="121.0" prefWidth="1174.0">
+         <children>
+            <ImageView fx:id="imgPort1" fitHeight="113.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </ImageView>
+            <ImageView fx:id="imgPort2" fitHeight="113.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </ImageView>
+            <ImageView fx:id="imgPort3" fitHeight="113.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </ImageView>
+            <ImageView fx:id="imgPort4" fitHeight="113.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true">
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </ImageView>
+            <ImageView fx:id="imgPort5" fitHeight="113.0" fitWidth="195.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </HBox>
+      <Button layoutX="58.0" layoutY="411.0" mnemonicParsing="false" opacity="0.0" prefHeight="106.0" prefWidth="194.0" text="Button" />
+      <Button layoutX="273.0" layoutY="406.0" mnemonicParsing="false" opacity="0.0" prefHeight="113.0" prefWidth="195.0" text="Button" />
+      <Button layoutX="490.0" layoutY="408.0" mnemonicParsing="false" opacity="0.0" prefHeight="113.0" prefWidth="190.0" text="Button" />
+      <Button layoutX="704.0" layoutY="409.0" mnemonicParsing="false" opacity="0.0" prefHeight="113.0" prefWidth="191.0" text="Button" />
+      <Button layoutX="920.0" layoutY="408.0" mnemonicParsing="false" opacity="0.0" prefHeight="113.0" prefWidth="189.0" text="Button" />
    </children>
 </AnchorPane>
