--- a/src/main/resources/com/example/demo/loginView.fxml
+++ b/src/main/resources/com/example/demo/loginView.fxml
@@ -15,18 +15,24 @@
    <children>
       <ImageView fitHeight="734.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@pics/fondoLogin.png" />
+            <Image url="@pics/fondoCreator.jpeg" />
          </image>
       </ImageView>
-      <Button fx:id="btnMostrarViewPrincipal2" layoutX="860.0" layoutY="583.0" mnemonicParsing="false" onAction="#btnMostrarViewPrincipal2" opacity="0.0" prefHeight="64.0" prefWidth="203.0" text="Button" />
+      <Button fx:id="btnMostrarViewPrincipal2" alignment="CENTER" contentDisplay="CENTER" layoutX="928.0" layoutY="596.0" mnemonicParsing="false" onAction="#btnMostrarViewPrincipal2" prefHeight="51.0" prefWidth="139.0" style="-fx-background-color: none; -fx-border-color: white; -fx-border-radius: 35; -fx-border-width: 3;" text="log in" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font></Button>
       <VBox layoutX="153.0" layoutY="390.0" prefHeight="179.0" prefWidth="371.0">
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="E-mail" wrappingWidth="370.296142578125">
                <font>
                   <Font size="28.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
             </Text>
-            <TextField fx:id="titMail" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="example@mail.ext">
+            <TextField fx:id="titMail" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="example@mail.ext" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
                   <Insets bottom="25.0" />
                </VBox.margin>
@@ -36,16 +42,12 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titPassword" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="*************">
-               <VBox.margin>
-                  <Insets bottom="25.0" />
-               </VBox.margin>
-            </TextField>
             <Label fx:id="txtError" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="371.0" textFill="RED">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
+            <TextField fx:id="titPassword" alignment="CENTER_RIGHT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="****************" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;" />
          </children>
       </VBox>
       <Text fill="WHITE" layoutX="154.0" layoutY="618.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No account yet? Register now" wrappingWidth="347.13991756078235">
@@ -54,5 +56,15 @@
          </font>
       </Text>
       <Button fx:id="btnMostrarViewRegistro" layoutX="143.0" layoutY="584.0" mnemonicParsing="false" onAction="#btnMostrarViewRegistro" opacity="0.0" prefHeight="47.0" prefWidth="330.0" text="Button" />
+      <Text fill="WHITE" layoutX="152.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="QR TV+" wrappingWidth="403.37867736816406">
+         <font>
+            <Font name="System Bold Italic" size="96.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="333.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="we love seeing you again" wrappingWidth="435.57171630859375">
+         <font>
+            <Font size="38.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
