--- a/src/main/resources/com/example/demo/registroView.fxml
+++ b/src/main/resources/com/example/demo/registroView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,11 +14,17 @@
    <children>
       <ImageView fitHeight="734.0" fitWidth="1185.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@pics/fondoRegistro.png" />
+            <Image url="@pics/fondoBlade11.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnMostrarViewLogin2" layoutX="359.0" layoutY="604.0" mnemonicParsing="false" onAction="#showViewLogin2" opacity="0.0" prefHeight="40.0" prefWidth="105.0" text="Button" />
-      <Button fx:id="btnMostrarViewPrincipal" layoutX="107.0" layoutY="535.0" mnemonicParsing="false" onAction="#showViewPrincipal" opacity="0.0" prefHeight="62.0" prefWidth="216.0" text="Button" />
+      <Button fx:id="btnMostrarViewLogin2" layoutX="342.0" layoutY="602.0" mnemonicParsing="false" onAction="#showViewLogin2" prefHeight="43.0" prefWidth="133.0" style="-fx-background-color: none;" text="login now" textFill="WHITE">
+         <font>
+            <Font size="23.0" />
+         </font></Button>
+      <Button fx:id="btnMostrarViewPrincipal" layoutX="107.0" layoutY="535.0" mnemonicParsing="false" onAction="#showViewPrincipal" prefHeight="62.0" prefWidth="216.0" style="-fx-background-color: none; -fx-border-color: white; -fx-border-radius: 30; -fx-border-width: 5;" text="Sign up" textFill="WHITE">
+         <font>
+            <Font size="30.0" />
+         </font></Button>
       <VBox layoutX="690.0" layoutY="130.0" prefHeight="511.0" prefWidth="371.0">
          <children>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -27,9 +32,9 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titNombre" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="name">
+            <TextField fx:id="titNombre" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="name" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
-                  <Insets bottom="15.0" />
+                  <Insets bottom="15.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -37,9 +42,9 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titUsername" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="username">
+            <TextField fx:id="titUsername" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="username" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
-                  <Insets bottom="25.0" />
+                  <Insets bottom="15.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="BirthDate" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -47,9 +52,9 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titDate" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="YYYY-MM-DD">
+            <TextField fx:id="titDate" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="YYYY-MM-DD" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
-                  <Insets bottom="25.0" />
+                  <Insets bottom="15.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Gender" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -57,9 +62,9 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titGender" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="gender">
+            <TextField fx:id="titGender" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="gender" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
-                  <Insets bottom="25.0" />
+                  <Insets bottom="15.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="E-mail" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -67,9 +72,9 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titMail" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="example@mail.ext">
+            <TextField fx:id="titMail" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="example@mail.ext" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: white;">
                <VBox.margin>
-                  <Insets bottom="25.0" />
+                  <Insets bottom="15.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" textAlignment="RIGHT" wrappingWidth="370.296142578125">
@@ -77,16 +82,27 @@
                   <Font size="28.0" />
                </font>
             </Text>
-            <TextField fx:id="titPassword" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="*************">
+            <TextField fx:id="titPassword" nodeOrientation="RIGHT_TO_LEFT" prefHeight="23.0" prefWidth="371.0" promptText="*************" style="-fx-background-color: none; -fx-border-radius: 15; -fx-border-color: white; -fx-text-fill: whte;">
                <VBox.margin>
-                  <Insets bottom="25.0" />
-               </VBox.margin></TextField>
-            <Label fx:id="txtError" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="371.0" textFill="RED">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
+                  <Insets bottom="15.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
          </children>
       </VBox>
+      <Text fill="WHITE" layoutX="114.0" layoutY="632.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Do you have an account?" wrappingWidth="240.11859130859375">
+         <font>
+            <Font name="System Italic" size="22.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="109.0" layoutY="424.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME">
+         <font>
+            <Font name="System Bold" size="96.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="105.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="..A new way to see the world.." wrappingWidth="468.587646484375">
+         <font>
+            <Font name="System Italic" size="30.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
