--- a/src/main/resources/com/example/demo/seriesView.fxml
+++ b/src/main/resources/com/example/demo/seriesView.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1170.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.SeriesViewController">
    <children>
@@ -28,12 +33,222 @@
          </font>
       </Label>
       <Button fx:id="btnMostrarViewHome" layoutX="284.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewHome" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="home" />
-      <Button fx:id="btnPrueba" layoutX="225.0" layoutY="585.0" mnemonicParsing="false" onAction="#mostrarVideo" prefHeight="55.0" prefWidth="151.0" text="Mirar video" />
       <Button fx:id="btnMostrarViewPeliculas" layoutX="375.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewPeliculas" opacity="0.0" prefHeight="65.0" prefWidth="90.0" text="peliculas" />
       <Button fx:id="btnMostrarViewSeries" layoutX="477.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewSeries" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="series" />
       <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewBiblioteca" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
       <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewBuscador" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
       <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewAjustes" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
       <TextField fx:id="txtId" layoutX="1120.0" layoutY="63.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
+      <VBox alignment="CENTER" layoutX="-1.0" layoutY="119.0" prefHeight="617.0" prefWidth="1171.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="121.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="btnPortada1" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort1" fitHeight="113.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada2" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort2" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada3" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort3" fitHeight="116.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada4" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort4" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada5" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort5" fitHeight="114.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="121.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="btnPortada6" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort6" fitHeight="113.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada7" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort7" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada8" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort8" fitHeight="116.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada9" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort9" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada10" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort10" fitHeight="114.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="121.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="btnPortada11" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort11" fitHeight="113.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada12" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort12" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada13" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort13" fitHeight="116.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada14" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort14" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada15" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort15" fitHeight="114.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="121.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="btnPortada16" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort16" fitHeight="113.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada17" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort17" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada18" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort18" fitHeight="116.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada19" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort19" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada20" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort20" fitHeight="114.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="121.0" prefWidth="1174.0">
+               <children>
+                  <Button fx:id="btnPortada21" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort21" fitHeight="113.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada22" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort22" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada23" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort23" fitHeight="116.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada24" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort24" fitHeight="115.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnPortada25" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fx:id="imgPort25" fitHeight="114.0" fitWidth="196.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <ChoiceBox fx:id="MenuFiltro" layoutX="977.0" layoutY="40.0" prefWidth="150.0" style="-fx-background-color: null; -fx-border-color: white; -fx-border-radius: 10;" />
+      <Text fx:id="txtFiltro" layoutX="1011.0" layoutY="103.0" opacity="0.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="78.9053955078125" />
    </children>
 </AnchorPane>
