--- a/src/main/resources/com/example/demo/principalView.fxml
+++ b/src/main/resources/com/example/demo/principalView.fxml
@@ -35,12 +35,12 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnMostrarViewHome" layoutX="284.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewHome" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="home" />
-      <Button fx:id="btnMostrarViewPeliculas" layoutX="375.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewPeliculas" opacity="0.0" prefHeight="65.0" prefWidth="90.0" text="peliculas" />
-      <Button fx:id="btnMostrarViewSeries" layoutX="477.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewSeries" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="series" />
-      <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewBiblioteca" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
-      <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewBuscador" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
-      <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewAjustes" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
+      <Button fx:id="btnMostrarViewHome" layoutX="284.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="home" />
+      <Button fx:id="btnMostrarViewPeliculas" layoutX="375.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="90.0" text="peliculas" />
+      <Button fx:id="btnMostrarViewSeries" layoutX="477.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="81.0" text="series" />
+      <Button fx:id="btnMostrarViewBiblioteca" layoutX="569.0" layoutY="26.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="102.0" text="biblioteca" />
+      <Button fx:id="btnMostrarViewBuscador" layoutX="685.0" layoutY="24.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="buscador" />
+      <Button fx:id="btnMostrarViewAjustes" layoutX="786.0" layoutY="31.0" mnemonicParsing="false" onAction="#showViewMenu" opacity="0.0" prefHeight="65.0" prefWidth="100.0" text="ajustes" />
       <TextField fx:id="txtId" disable="true" layoutX="1100.0" layoutY="43.0" opacity="0.0" prefHeight="26.0" prefWidth="32.0" />
       <Text fill="WHITE" layoutX="1091.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="&gt;" textAlignment="CENTER" wrappingWidth="50.21630859375">
          <font>
@@ -90,7 +90,6 @@
             </Label>
          </children>
       </VBox>
-      <Button fx:id="btnPrueba" layoutX="1012.0" layoutY="331.0" mnemonicParsing="false" onAction="#mostrarVideo" opacity="0.0" prefHeight="56.0" prefWidth="127.0" text="Mirar video" />
       <HBox alignment="CENTER" layoutX="-2.0" layoutY="404.0" prefHeight="121.0" prefWidth="1174.0">
          <children>
             <Button fx:id="btnPortada1" contentDisplay="CENTER" ellipsisString="" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#showPortada" prefHeight="113.0" prefWidth="200.0" style="-fx-background-color: null;" textAlignment="CENTER">
